# simple-face-recognition-project

./: .gitignore  README.md
Python/: app.py
Python/libs/: __init__.py  main.py
cpp/: CMakeLists.txt  README.md  build.py  conanfile.py
cpp/src/: main.cpp
cpp/src/FaceRecognition/: FaceRecognition.cpp  FaceRecognition.h
python/: README.md  app.py  requirements.txt
python/libs/: __init__.py  alertdialog.py
